<resources>
    <string name="app_name">LabExam04</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="TODO">TO-DO</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="details">Details</string>
    <string name="pLevel">Priority Level</string>
</resources>